# etl-skeleton

./: .env  .env.example  Makefile  README.md  decorator.py  docker-compose.yml  pyproject.toml  requirements.txt
config/: logging.yaml  settings.yaml
data/input/: users.csv
scripts/: generate_csv.py
sql/: init.sql
src/etl/: config.py  logging_setup.py  main.py  models.py
src/etl/extract/: api_client.py  db_reader.py  file_reader.py
src/etl/load/: postgres_copy.py  postgres_upsert.py
src/etl/transform/: core.py
src/etl_pipeline.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_transform.py
